--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "gh-pages": "^2.2.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-image-resizer": "^1.3.0",
     "react-mdl": "^2.1.0",
     "react-scripts": "3.4.0"
   },
